--- a/src/Theme.css
+++ b/src/Theme.css
@@ -1,7 +1,10 @@
 body {
     margin: 0;
-    overflow: hidden
+    overflow: hidden;
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
+
+
 
 .king {
     display: flex;
