--- a/src/Theme.css
+++ b/src/Theme.css
@@ -3,6 +3,8 @@ body {
     overflow: hidden;
     font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
     color: white;
+    height: 100vh;
+    width: 100vw;
 }
 
 
@@ -57,6 +59,7 @@ body {
     margin: 0 auto;
 }
 #display {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    margin: 0;
 }
