--- a/src/Theme.css
+++ b/src/Theme.css
@@ -58,6 +58,9 @@ body {
     font-size: 0.8rem;
     margin: 0 auto;
 }
+#main{
+    cursor: none;
+}
 #display {
     height: 100%;
     width: 100%;
